bk_ida/gccida/c1/find_split_point
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3376:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3389:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3389:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3395:6: error: use of undeclared identifier 'single_use'; did you mean 'single_set_2'?
rtx *single_use; // rax 
     ^~~~~~~~~~
     single_set_2
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/rtl.h:1470:12: note: 'single_set_2' declared here
extern rtx single_set_2                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3395:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx (rtx, rtx)' (aka 'struct rtx_def *(struct rtx_def *, struct rtx_def *)'))
rtx *single_use; // rax 
~~~ ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3399:7: error: use of undeclared identifier 'v33'
rtx **v33; // rbx 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3402:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3402:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3403:4: error: expected ';' after expression
rtx v37; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3403:5: error: use of undeclared identifier 'v37'
rtx v37; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3418:4: error: expected ';' after expression
rtx v52; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3418:5: error: use of undeclared identifier 'v52'
rtx v52; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3420:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v54; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3421:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3426:6: error: use of undeclared identifier 'v60'
rtx *v60; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3430:4: error: expected ';' after expression
rtx v65; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3430:5: error: use of undeclared identifier 'v65'
rtx v65; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3432:6: error: use of undeclared identifier 'v67'
rtx *v67; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/combine.c:3435:4: error: expected ';' after expression
rtx v70; // r12 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_split_point/src/obj/combine.o] Error 1
